--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_bloc: ^6.0.0
   http: ^0.12.0
   equatable: ^1.0.0
+  rxdart: ^0.25.0
 
 dev_dependencies:
   flutter_test:
