--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.12.0
   equatable: ^1.0.0
   rxdart: ^0.25.0
+  carousel_slider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
