--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ flutter:
     - assets/mheartrate.txt
     - assets/fheartrate.txt
     - assets/heartrate.txt
+    - assets/whale_1.jpg
+    - assets/whale_2.jpg
+    - assets/whale_3.jpg 
 
   #   - images/a_dot_ham.jpeg
 
