--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   equatable: ^1.0.0
   rxdart: ^0.25.0
   carousel_slider: ^3.0.0
+  image_picker: ^0.6.5
 
 dev_dependencies:
   flutter_test:
