--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   rxdart: ^0.25.0
   carousel_slider: ^3.0.0
   image_picker: ^0.6.5
+  google_fonts: ^1.1.0
 
 dev_dependencies:
   flutter_test:
