--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   carousel_slider: ^3.0.0
   image_picker: ^0.6.5
   google_fonts: ^1.1.0
+  flutter_svg: ^0.19.1
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +55,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
+    - assets/icons/
     - assets/
     - assets/mheartrate.txt
     - assets/fheartrate.txt
